feat(people): person-unification phase 3 step 2c.1 — pos-people contact-point model
Add typed contact model to pos-people (ContactPointType, PersonContactPoint entity + V4 table + repository), expose contactPoints on GET /v1/people/by-ids (batched), seed 40 contact points for the 20 commercial contacts. Foundation for sourcing contacts from pos-people (ADR-0015 I2). Additive. 77 tests pass.